# sign-to-text-AR

./: README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: index.html
src/dataset/: data_loader.py
src/models/: t.py
tests/: test_build.py
