[metadata]
name = sign-to-text-AR
version = 0.0.1
description = A package to convert Arabic sign language (ArSL) to text in realtime
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mogomaa79/sign-to-text-AR
template_author = Omar Abdelgawad
author =  Mohamed Gomaa
author_email = mohamed.abdullah@ejust.edu.eg
keywords = OpenCV, Mediapipe, Arabic, LSTM, ArSL
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
install_requires = file: requirements.txt
    numpy==1.26.2
    pandas==2.1.4

python_requires = >=3.11
zip_safe = no

[options.packages.find]
where = src
; exclude =
;     tests

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    pylint>=2.9
    tox>=3.24
    flake8>=3.9

[options.package_data]
siri = py.typed

[flake8]
max-line-length = 160